# langchain-concentrate

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
langchain_concentrate/: __init__.py  chat_models.py
tests/integration_tests/: test_chat.py  test_standard.py  test_tools.py
tests/unit_tests/: test_chat_models.py  test_standard.py
