[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-concentrate"
description = "LangChain integration for Concentrate.ai — a unified LLM gateway with the OpenAI Responses API."
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
version = "0.1.0"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain-core>=1.4.7,<2.0.0",
    "langchain-openai>=1.3.0,<2.0.0",
]

[project.urls]
Homepage = "https://concentrate.ai"
Documentation = "https://concentrate.ai/docs"
Repository = "https://github.com/concentrate-ai/langchain-concentrate"
Issues = "https://github.com/concentrate-ai/langchain-concentrate/issues"

[dependency-groups]
test = [
    "pytest>=9.0,<10.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-socket>=0.6.0,<1.0.0",
    "syrupy>=5.0.0,<6.0.0",
    "langchain-tests>=1.1.9,<2.0.0",
]
lint = ["ruff>=0.13.1,<0.16.0"]
typing = ["mypy>=1.10,<3.0"]

[tool.uv.sources]
langchain-core = { path = "../libs/core", editable = true }
langchain-openai = { path = "../libs/partners/openai", editable = true }
langchain-tests = { path = "../libs/standard-tests", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--strict-markers --strict-config"
markers = [
    "requires_api_key: mark tests that need CONCENTRATE_API_KEY",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "D"]
ignore = ["D203", "D213", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ["D", "S101"]

[tool.mypy]
disallow_untyped_defs = true
